# agl-app-store

./: .gitignore  README.md  pubspec.yaml
lib/: flatpak_installer.dart  main.dart
lib/bloc/: flatpak_bloc.dart
lib/data/: flatpak_cache.dart  flatpak_repository.dart
lib/models/: app_source.dart  flatpak_package.dart
lib/pages/: about_page.dart  app_detail_page.dart  category_page.dart  installed_apps_page.dart  monitor_page.dart  settings_page.dart  store_page.dart
lib/platform/: flatpak_platform.dart
lib/services/: api_benchmark.dart  api_service.dart  fps_service.dart  gps_service.dart  log_service.dart  system_monitor.dart  theme_service.dart  user_log.dart
lib/theme/: app_colors.dart  app_spacing.dart  app_theme.dart  app_typography.dart
lib/widget/: category_app_card.dart
lib/widgets/: gauge_widget.dart  line_chart_widget.dart  operations_island.dart  pressable.dart  skeleton.dart  speedometer_widget.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h  installer_plugin.cc  installer_plugin.h  my_application.cc  my_application.h
test/: widget_test.dart
